@@ -61,7 +61,9 @@ char *hpd_up =
         "                          --recursive, -R - traverse the whole <root dir> directory tree\n"
         "                          --xretry - re-start the operation when no results\n"
         "  -print  <format>      Format output using {var} directives (see DATA_STRUCTURES for a field list)\n"
+        "                          -print- <file|-> - read <format> from file/stdin\n"
         "  -printf <format>      Same as -print, only does not print a new line character at the end\n"
+        "                          -printf- <file|-> - read <format> from file/stdin\n"
         "  -preprint <format>    Print formatted string before parse operation\n"
         "  -postprint <format>   Print formatted string after parse operation\n"
         "  --stdin               Read data from stdin\n"
@@ -122,11 +124,13 @@ char *hpd_up =
         "                          Operators {..} are overwritten with dirlog values\n"
         "                          If return value is non-zero, the processed record gets filtered\n"
         "                          Uses system() call (man system)\n"
+        "                          -exec- <file|-> - read input from file/stdin\n"
         "  -execv <command [{field}..{field}..]> [--esredir=<file>]\n"
         "                        Same as --exec, only instead of calling system(), this uses execv() (man exec)\n"
         "                          It's generally much faster compared to --exec, since it doesn't fork /bin/sh\n"
         "                          for each individual processed record\n"
         "                          --esredir redirects stdout from executed command to <file>\n"
+        "                          -execv- <file|-> - read input from file/stdin\n"
         "  --preexec  <command [{field}..{field}..]>\n"
         "                        Execute shell <command> before starting main procedure\n"
         "  --postexec <command [{field}..{field}..]>\n"
